tests/algorithms/x/Elixir/electronics/electric_power.out
warning: variable "i" is unused (there is a variable with the same name in the context, use the pin operator (^) to match on it or prefix this variable with underscore if it is not meant to be used)
    │
 23 │       {i, p} = try do
    │        ~
    │
    └─ /workspace/mochi/tests/algorithms/x/Elixir/electronics/electric_power.exs:23:8: Main.pow10/1

    error: undefined variable "floor"
    │
 37 │       throw {:return, floor.(x * m + 0.5) / m}
    │                       ^^^^^
    │
    └─ /workspace/mochi/tests/algorithms/x/Elixir/electronics/electric_power.exs:37:23: Main.round_to/2

** (CompileError) /workspace/mochi/tests/algorithms/x/Elixir/electronics/electric_power.exs: cannot compile module Main (errors have been logged)